[package]
name = "grpchub-serve"
version = "0.1.0"
edition = "2024"

[dependencies]
prost = "0.13"
prost-types = "0.13"
tonic = "0.13.1"
tokio = { version = "1.45.0", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["full"] }
h2 = { version = "0.4.10", features = ["stream"] }
# workspace
grpchub-pb.workspace = true
dashmap = "6.1.0"
tonic-reflection = "0.13.1"
